<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GLOBAL -->
    <string name="app_name">Badge</string>
    <string name="action_show_participants">Show Participants</string>

    <!-- ONBOARDING SIGN UP -->
    <string name="invalid_email_error">Invalid email address</string>
    <string name="invalid_password_error">You must provide a password</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login_title">Login to Badge</string>
    <string name="login_info">Log in with your company email address</string>
    <string name="login_email_hint">Your Work Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Continue</string>

    <!-- WELCOME ACTIVITY -->
    <string name="welcome_info">Before you start, we would like to get to know you a bit better.</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_continue">Continue</string>
    <string name="welcome_first_name">First Name</string>
    <string name="welcome_last_name">Last Name</string>
    <string name="welcome_cell_number">Cell Number</string>
    <string name="welcome_birthday">Birthday (optional)</string>

    <!-- CONTACT LISTVIEW ELEMENT -->
    <string name="content_description_thumb">Contact Thumbnail Image</string>
    <string name="content_description_message_contact">Message Contact</string>

    <!-- CONTACTS ACTIVITY -->
    <string name="contacts_tab_contacts">Contacts</string>
    <string name="contacts_tab_departments">Departments</string>

    <!-- PROFILE ACTIVITY -->
    <string name="profile_heading_availability">Availability</string>
    <string name="profile_heading_manages">Manages</string>
    <string name="profile_heading_contact">Contact Information</string>
    <string name="content_description_profile_image">Profile Image</string>
    <string name="content_description_my_settings">My Settings</string>
    <string name="profile_heading_department">Department</string>

    <!-- ONBOARDING POSITION -->
    <string name="tell_us_more_title">Tell us more about your position</string>
    <string name="your_job_title">Your Job Title</string>
    <string name="your_department">Choose Department</string>
    <string name="reporting_to">Reporting to</string>

    <!-- SETTINGS -->
    <string name="settings_button">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_new_message">New Message</string>
    <string name="settings_office_location">Office Location</string>
    <string name="settings_more">More</string>
    <string name="settings_about">About</string>
    <string name="settings_log_out">Log Out</string>

    <!-- EDIT PROFILE -->
    <string name="edit_profile_back">Edit Profile</string>
    <string name="edit_profile_your">Your Profile</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="current_password">Current Password</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change</string>

    <!-- ONBOARDING DEPARTMENT -->
    <string name="select_department">Select Department</string>
    <string name="add_new_department">Add New Department</string>

    <!-- ONBOARDING MAP + LOCATION -->
    <string name="add_new_office_back">Add New Office</string>
    <string name="which_location_title">At which office do you work?</string>
    <string name="address">Address</string>
    <string name="add_location_button">Add</string>
    <string name="add_reporting_to">Reporting To</string>
    <string name="check_mark">Currently Selected</string>
    <string name="add_new_location">Add a New Office</string>
    <string name="no_office_button">I don\'t work at an office</string>

    <!-- EDIT PROFILE -->
    <string name="edit_profile_contact_info">Contact Information</string>
    <string name="profile_picture_title">Profile Picture</string>
    <string name="profile_picture_details">Tap to change your picture</string>
    <string name="edit_profile_your_position">Your Position</string>
    <string name="edit_profile_personal">Personal</string>
    <string name="edit_profile_first_name">First Name</string>
    <string name="edit_profile_last_name">Last Name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_cell_phone">Cell Phone</string>
    <string name="edit_profile_office_phone">Office Phone</string>
    <string name="edit_profile_job_title">Job Title</string>
    <string name="edit_profile_department">Department</string>
    <string name="edit_profile_reporting_to">Reporting to</string>
    <string name="edit_profile_office_location">Office</string>
    <string name="edit_profile_start_date">Start Date</string>
    <string name="edit_profile_birth_date">Birthday</string>
    <string name="edit_profile_website">Website</string>
    <string name="edit_profile_linkedin">Linkedin</string>

    <!-- SEARCH -->
    <string name="search_hint">Search</string>
    <string name="back_button_default_value">Back</string>
    <string name="profile_heading_reports_to">Reports To</string>
    <string name="message_next">Next</string>
    <string name="message_new">New Message</string>
    <string name="to_users">To:</string>
    <string name="content_description_send_message">Send Message</string>
    <string name="write_message">Write a message…</string>
    <string name="enter_recipients_hint">Enter Recipients</string>
    <string name="content_description_empty_chat_bubble">Empty Chat Bubble</string>
    <string name="no_messages_title">No Messages Yet</string>
    <string name="no_messages_info">Be friendly, start a conversation with your teammates</string>
    <string name="reset_email_hint">Email address</string>
    <string name="reset_title">Reset Your Password</string>
    <string name="reset_info">Enter your email address below and we\'ll send you a link to reset your password.</string>
    <string name="forgot_password_question">Forgot your password?</string>
    <string name="sign_up_for_account">Not yet registered? Sign up for Beta.</string>
    <string name="settings_feedback">Feedback</string>
    <string name="message_failed">Message Failed</string>
    <string name="search_contacts">Search contacts</string>
    <string name="search_departments">Search departments</string>
    <string name="name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log In</string>
    <string name="sing_up">Sign Up</string>
    <string name="entrance_slogan">Smart, Business Messaging</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email_input_hint">you@domain.com</string>
    <string name="phone_input_hint">+1 (100) 123-4567</string>
    <string name="phone">Phone</string>
    <string name="title_activity_verify">Verify Email</string>
    <string name="verify_email_activity_message">We have sent you an Email with a verification code. Please enter the 4-digit validation code.</string>
    <string name="four_digit_code">4-digit code</string>
    <string name="title_activity_onboarding_invite_colleague">Invite Coworkers</string>
    <string name="search">Search</string>
    <string name="create_group">Create Group</string>
    <string name="send_message">Send Message</string>
    <string name="settings">Settings</string>

</resources>
