<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_root"
    >

    <ScrollView
        android:id="@+id/login_scrollview"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            >
            <com.triaged.badge.app.views.TextViewWithFont
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/login_title"
                android:textColor="@color/accent_turquoise"
                android:textSize="31sp"
                custom:font="Roboto-Light.ttf"
                />

            <com.triaged.badge.app.views.TextViewWithFont
                android:id="@+id/login_info"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="68dp"
                android:text="@string/login_info"
                android:textColor="@color/sub_text_gray"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_below="@id/login_title"
                custom:font="Roboto-Regular.ttf"
                />

            <com.triaged.badge.app.views.EditTextWithFont
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/main_text_black"
                android:textColorHint="@color/light_text_gray"
                android:hint="@string/login_email_hint"
                android:layout_below="@id/login_info"
                android:textSize="15sp"
                android:text="\@startupgiraffe.com"
                android:inputType="textNoSuggestions"
                custom:font="Roboto-Regular.ttf"
                />

            <com.triaged.badge.app.views.EditTextWithFont
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/main_text_black"
                android:textColorHint="@color/light_text_gray"
                android:hint="@string/login_password_hint"
                android:layout_below="@id/login_email"
                android:textSize="15sp"
                android:inputType="textPassword"
                custom:font="Roboto-Regular.ttf"
                />

            <com.triaged.badge.app.views.ButtonWithFont
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:text="@string/login_button"
                android:gravity="center"
                android:background="@drawable/rounded_button"
                android:layout_below="@id/login_password"
                android:layout_marginTop="35dp"
                android:textSize="16sp"
                custom:font="Roboto-Regular.ttf"
                />

            <com.triaged.badge.app.views.TextViewWithFont
                android:id="@+id/forgot_password_button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password_question"
                android:textColor="@color/light_text_gray"
                android:textSize="12sp"
                android:padding="5dp"
                android:gravity="center"
                android:layout_below="@id/login_button"
                custom:font="Roboto-Regular.ttf"
                android:background="@drawable/white_button_bg"
                />

        </RelativeLayout>

    </ScrollView>

    <com.triaged.badge.app.views.TextViewWithFont
        android:id="@+id/sign_up_for_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_for_account"
        android:textColor="@color/accent_turquoise"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        custom:font="Roboto-Regular.ttf"
        android:background="@drawable/white_button_bg"
        />

</RelativeLayout>