<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_root"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        >
        <com.triaged.badge.app.views.TextViewWithFont
            android:id="@+id/reset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/reset_title"
            android:textColor="@color/accent_turquoise"
            android:textSize="31sp"
            custom:font="Roboto-Light.ttf"
            />

        <com.triaged.badge.app.views.TextViewWithFont
            android:id="@+id/reset_info"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="88dp"
            android:text="@string/reset_info"
            android:textColor="@color/sub_text_gray"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_below="@id/login_title"
            custom:font="Roboto-Regular.ttf"
            />

        <com.triaged.badge.app.views.EditTextWithFont
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/main_text_black"
            android:textColorHint="@color/light_text_gray"
            android:hint="@string/reset_email_hint"
            android:layout_below="@id/reset_info"
            android:textSize="15sp"
            android:inputType="textNoSuggestions"
            custom:font="Roboto-Regular.ttf"
            />

        <com.triaged.badge.app.views.ButtonWithFont
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textColor="@color/white"
            android:text="@string/login_button"
            android:gravity="center"
            android:background="@drawable/rounded_button"
            android:layout_below="@id/reset_email"
            android:layout_marginTop="35dp"
            android:textSize="16sp"
            custom:font="Roboto-Regular.ttf"
            />
    </RelativeLayout>

</ScrollView>