<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.triaged.badge.ui.entrance.EntranceActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/entrance_image"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entrance_text_layout"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="36dp"
        android:padding="12dp"
        android:layout_above="@+id/entrance_button_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_margin="4dp"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/entrance_slogan"
            android:id="@+id/textView2"
            android:layout_margin="4dp"
            android:textColor="@color/prime_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entrance_button_layout"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/sing_up"
            android:id="@+id/entrance_sign_up"
            android:background="@drawable/blue_button_selector"
            android:textColor="@color/white"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/login"
            android:id="@+id/entrance_login"
            android:textColor="@color/white"
            android:background="@drawable/gray_button_selector"
            android:layout_margin="5dp" />
    </LinearLayout>

</RelativeLayout>
