<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.triaged.badge.ui.base.views.EditTextWithFont
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/main_text_black"
                android:textColorHint="@color/light_text_gray"
                android:hint="@string/current_password"
                android:textSize="15sp"
                custom:font="Roboto-Regular.ttf"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:inputType="textPassword" />

            <com.triaged.badge.ui.base.views.EditTextWithFont
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/main_text_black"
                android:textColorHint="@color/light_text_gray"
                android:hint="@string/new_password"
                android:textSize="15sp"
                custom:font="Roboto-Regular.ttf"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:inputType="textPassword" />

            <com.triaged.badge.ui.base.views.EditTextWithFont
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/main_text_black"
                android:textColorHint="@color/light_text_gray"
                android:hint="@string/confirm_password"
                android:textSize="15sp"
                custom:font="Roboto-Regular.ttf"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:inputType="textPassword" />
        </LinearLayout>


    </ScrollView>

    <com.triaged.badge.ui.base.views.ButtonWithFont
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:text="@string/change_password"
        android:gravity="center"
        android:background="@drawable/full_width_button"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        custom:font="Roboto-Regular.ttf" />
</RelativeLayout>